[tool.poetry]
name = "air-quality"
version = "0.1.0"
description = ""
authors = ["Marco Plaisier <m.plaisier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sensirion-i2c-driver = "^1.0.0"
paho-mqtt = "^2.1.0"
bme680 = "^1.1.1"
sensirion-i2c-scd = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
